# C-_GENETICS

./: CMakeLists.txt  README.md  build_instructions.txt
include/: cell.hpp  neuralNet.hpp  raylib.h  scl.hpp  simulation.hpp
src/: cell.cpp  main.cpp  neuralNet.cpp  scl.cpp  simulation.cpp
